Update expr and description.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1256,7 +1256,7 @@ groups:
 # BMC alerts
   - alert: BMC_CredentialsNotFound
     expr: |
-        reboot_e2e_result{status="credentials_not_found"}
+        reboot_e2e_result{status="credentials_not_found"} == 0
     for: 5m
     labels:
       repo: ops-tracker
@@ -1269,7 +1269,7 @@ groups:
 
   - alert: BMC_ConnectionFailed
     expr: |
-      reboot_e2e_result{status="connection_failed"}
+      reboot_e2e_result{status="connection_failed"} == 0
     for: 1d
     labels:
       repo: ops-tracker
@@ -1277,5 +1277,6 @@ groups:
     annotations:
       summary: Connection to {{ $labels.target }} has failed.
       description: >
-        The E2E test failed because the Reboot API could't connect to this BMC.
-        Please check that the BMC is enabled and the credentials are correct.
+        The E2E test is failing because the Reboot API could't connect to this
+        BMC. Please check that the BMC is enabled on this machine and the
+        credentials in Datastore are correct.
