--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1356,7 +1356,9 @@ groups:
 # /v1/e2e endpoint is scraped, and reports failure via this metric.
   - alert: BMC_CredentialsNotFound
     expr: |
-        reboot_e2e_result{status="credentials_not_found"} == 0
+        label_replace(reboot_e2e_result{status="credentials_not_found"}, "site", "$1", "machine",
+        "mlab[1-4]\\.([a-z]{3}[0-9tc]{2}).+") == 0 unless on(site) gmx_site_maintenance == 1
+        unless on(machine) gmx_machine_maintenance == 1
     for: 5m
     labels:
       repo: ops-tracker
@@ -1369,7 +1371,9 @@ groups:
 
   - alert: BMC_ConnectionFailed
     expr: |
-      reboot_e2e_result{status="connection_failed"} == 0
+      label_replace(reboot_e2e_result{status="connection_failed"}, "site", "$1", "machine",
+      "mlab[1-4]\\.([a-z]{3}[0-9tc]{2}).+") == 0 unless on(site) gmx_site_maintenance == 1
+      unless on(machine) gmx_machine_maintenance == 1
     for: 1d
     labels:
       repo: ops-tracker
