Only alert if RAM on a platform (bare metal) machine goes below ~16GB. Don't bother with cloud nodes or testing nodes (which can be cloud nodes).

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1308,7 +1308,7 @@ groups:
 
   - alert: PlatformHardware_RamBelowExpected
     expr: |
-      node_memory_MemTotal_bytes{machine=~"^mlab[1-4].[a-z]{3}[0-9tc]{2}.*"} / 2^20 < 16000
+      node_memory_MemTotal_bytes{machine=~"^mlab[1-4].[a-z]{3}[0-9]{2}.*"} / 2^20 < 16000
     for: 1d
     labels:
       repo: ops-tracker
