--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1382,3 +1382,37 @@ groups:
         the mainboard. Login to the machine and double check the hardware
         and/or system messages.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
+
+# BMC alerts
+# The Reboot API performs an E2E connection test on a BMC every time its
+# /v1/e2e endpoint is scraped, and reports failure via this metric.
+  - alert: BMC_CredentialsNotFound
+    expr: |
+        reboot_e2e_result{status="credentials_not_found"}
+        unless on(site) gmx_site_maintenance == 1
+        unless on(machine) gmx_machine_maintenance == 1
+    for: 5m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: Credentials for {{ $labels.target }} not found on GCD.
+      description: >
+        The E2E test cannot run because credentials for this BMC are not
+        present on Google Cloud Datastore. Please add them.
+
+  - alert: BMC_ConnectionFailed
+    expr: |
+      reboot_e2e_result{status="connection_failed"}
+      unless on(site) gmx_site_maintenance == 1
+      unless on(machine) gmx_machine_maintenance == 1
+    for: 1d
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: Connection to {{ $labels.target }} has failed.
+      description: >
+        The E2E test is failing because the Reboot API could't connect to this
+        BMC. Please check that the BMC is enabled on this machine and the
+        credentials in Datastore are correct.
