--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -611,6 +611,23 @@ groups:
         means there is a persistent failure in the underlying service. Please
         check the GAE dashboard and logs to determine the cause.
 
+# If no traffic has been redirected to the staging instance for the past 24h,
+# an alert should fire.
+  - alert: MlabNSReverseProxyNotWorking
+    expr: |
+      sum_over_time(stackdriver_gae_app_logging_googleapis_com_user_reverse_proxy_counter[24h]) == 0
+    labels:
+      repo: dev-tracker
+      severity: ticket
+    annotations:
+      summary: mlab-ns' reverse proxy is not redirecting any traffic.
+      description: >
+        mlab-ns is supposed to send some of the production traffic to the
+        staging instance, and this has not been happening for the past 24h.
+        Please check that the probability values on Google Cloud Datastore are
+        not zero for every experiment and that there are no errors related to
+        reverse proxying in the mlab-ns logs.
+
 # One or more NDT-specific metrics is missing. These are the NDT metrics that
 # mlab-ns relies on to determine whether NDT is up and running, so we need to
 # make sure that the metrics are always present. NOTE: mlab-ns additionally
