--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -601,10 +601,9 @@ groups:
     expr: |
       sum_over_time(stackdriver_gae_app_appengine_googleapis_com_http_server_response_count{
         deployment="mlabns-stackdriver", module_id="rate-limiter", loading="false",
-        response_code=~"5.."}[30m]) /
+        response_code=~"5.."}[24h]) /
       sum_over_time(stackdriver_gae_app_appengine_googleapis_com_http_server_response_count{
-        deployment="mlabns-stackdriver", module_id="rate-limiter",loading="false"}[30m]) > 0
-    for: 2m
+        deployment="mlabns-stackdriver", module_id="rate-limiter",loading="false"}[24h]) > 0
     labels:
       repo: dev-tracker
       severity: page
