--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -631,9 +631,11 @@ groups:
 
 # If no traffic has been redirected to the staging instance for the past 24h,
 # an alert should fire.
-  - alert: MlabNSReverseProxyNotWorking
+  - alert: MlabNSNdtSslReverseProxyNotWorking
     expr: |
-      sum_over_time(stackdriver_gae_app_logging_googleapis_com_user_reverse_proxy_counter[24h]) == 0
+      sum_over_time(stackdriver_gae_app_logging_googleapis_com_user_reverse_proxy_counter{
+        experiment="ndt_ssl"}[1h]) == 0
+    for: 1m
     labels:
       repo: dev-tracker
       severity: ticket
@@ -645,6 +647,8 @@ groups:
         Please check that the probability values on Google Cloud Datastore are
         not zero for every experiment and that there are no errors related to
         reverse proxying in the mlab-ns logs.
+
+# If not traffic for
 
 # One or more NDT-specific metrics is missing. These are the NDT metrics that
 # mlab-ns relies on to determine whether NDT is up and running, so we need to
