--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -311,6 +311,7 @@ scrape_configs:
         - 'node_edac_correctable_errors_total'
         - 'node_edac_uncorrectable_errors_total'
         - 'kube_node_spec_taint{key="lame-duck"}'
+        - 'kube_node_status_condition'
         - 'etcd_server_has_leader'
         - 'etcd_server_leader_changes_seen_total'
         - 'etcd_server_proposals_failed_total'
