--- a/k8s/prometheus-federation/deployments/gmx.yml
+++ b/k8s/prometheus-federation/deployments/gmx.yml
@@ -23,9 +23,11 @@ spec:
         run: gmx-server
     spec:
       containers:
-      - image: measurementlab/github-maintenance-exporter:v0.2.0
+      - image: measurementlab/github-maintenance-exporter:v1.0.1
         name: gmx-server
-        args: ["--storage.state-file=/var/lib/gmx/gmx-state"]
+        args:
+        - --storage.state-file=/var/lib/gmx/gmx-state
+        - --project={{GCLOUD_PROJECT}}
         env:
         - name: GITHUB_WEBHOOK_SECRET
           valueFrom:
